[package]
name = "xcm-simulator-trappist"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Examples of xcm-simulator usage."
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.4" }
scale-info = { version = "2.9.0" , features = ["derive"] }
thousands = "0.2.0"
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.2.25" , features = ["env-filter", "tracing-log"] }

frame-system = { version = "23.0.0" }
frame-support = { version = "23.0.0" }
pallet-assets = { version = "24.0.0" }
pallet-asset-registry = { version = "0.0.1", path = "../pallets/asset-registry" }
pallet-balances = { version = "23.0.0" }
pallet-sudo = { version = "23.0.0" }
sp-std = { version = "10.0.0" }
sp-core = { version = "23.0.0" }
sp-runtime = { version = "26.0.0" }
sp-io = { version = "25.0.0" }

xcm = { package = "staging-xcm", version = "2.0.0" }
xcm-simulator = { version = "2.0.0" }
xcm-executor = { package = "staging-xcm-executor", version = "2.0.0" }
xcm-builder = { package = "staging-xcm-builder", version = "2.0.0" }
pallet-xcm = { version = "2.0.0" }

# Polkadot
polkadot-core-primitives = { version = "2.0.0" }
polkadot-runtime-common = { version = "2.0.0" }
polkadot-runtime-parachains = { version = "2.0.0" }
polkadot-parachain-primitives = { version = "1.0.0" }

# Cumulus
cumulus-pallet-xcm = { version = "0.2.0" }
cumulus-primitives-utility = { version = "0.2.0" }
pallet-collator-selection = { version = "4.0.0" }
parachains-common = { version = "2.0.0" }

# Runtimes
rococo-runtime = { version = "2.0.0" }
rococo-runtime-constants = { version = "2.0.0" }
asset-hub-kusama-runtime = { version = "0.10.0" }
stout-runtime = { path = "../runtime/stout" }
trappist-runtime = { path = "../runtime/trappist" }

# Trappist XCM Primitives
xcm-primitives = { path = "../primitives/xcm", default-features = false }
