[package]
name = "xcm_contract_poc"
version = "1.0.0"
authors = ["Trappist Network <https://github.com/TrappistNetwork>"]
license = "Unlicense"
homepage = "https://trappist.io"
repository = "https://github.com/TrappistNetwork/trappist"
edition = "2021"

[profile.release.package.compiler_builtins]
debug-assertions = false
overflow-checks = false

[dependencies]
ink_primitives = { version = "3.3", default-features = false }
ink_metadata = { version = "3.3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.3", default-features = false }
ink_storage = { version = "3.3", default-features = false }
ink_lang = { version = "3.3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.25" }

[lib]
name = "xcm_contract_poc"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "xcm/std"
]
ink-as-dependency = []
