[package]
name = "xcm_contract_poc"
version = "1.0.0"
authors = ["Trappist Network <https://github.com/TrappistNetwork>"]
license = "Unlicense"
homepage = "https://trappist.io"
repository = "https://github.com/TrappistNetwork/trappist"
edition = "2021"

[profile.release.package.compiler_builtins]
debug-assertions = false
overflow-checks = false

[dependencies]
ink = { git = "https://github.com/paritytech/ink", branch = "master", default-features = false }

scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
scale = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive", "full"] }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "trappist-xcm-v3" }

sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false, features = ["disable_panic_handler", "disable_oom", "disable_allocator"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false }

[lib]
name = "xcm_contract_poc"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "xcm/std",
    "frame-support/std",
    "sp-io/std",
]
ink-as-dependency = []

[profile.release]
overflow-checks = false
