[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true }

# Tracing
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# Substrate
frame-support = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
pallet-assets = { workspace = true }

# Cumulus
cumulus-ping = { workspace = true }
integration-tests-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0" }
xcm-emulator = { workspace = true }

# Polkadot
polkadot-parachain = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
pallet-xcm = { workspace = true }
xcm-primitives = { workspace = true }

# PDD: Runtimes
polkadot-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
kusama-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
rococo-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
asset-hub-polkadot-runtime = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0" }
trappist-runtime = { path = "../../runtime/trappist" }
stout-runtime = { path = "../../runtime/stout" }

# Local
pallet-asset-registry = { workspace = true }

