[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true }
thousands = "0.2.0"

# Tracing
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# Substrate
frame-system = { workspace = true }
frame-support = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
pallet-assets = { workspace = true }

# Cumulus
cumulus-ping = { workspace = true }
integration-tests-common = { workspace = true }
xcm-emulator = { workspace = true }

# Polkadot
polkadot-parachain-primitives = { workspace = true }
xcm = { workspace = true }
xcm-executor = { workspace = true }
pallet-xcm = { workspace = true }
xcm-primitives = { workspace = true }

# PDD: Runtimes
polkadot-runtime-common = { workspace = true }
parachains-common = { workspace = true }
rococo-runtime = { workspace = true }
asset-hub-polkadot-runtime = { workspace = true }
trappist-runtime = { path = "../../runtime/trappist" }
stout-runtime = { path = "../../runtime/stout" }

# Local
pallet-asset-registry = { workspace = true }

