[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true }
thousands = "0.2.0"

# Tracing
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# Substrate
frame-system = { workspace = true }
frame-support = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
pallet-assets = { workspace = true }

# Cumulus
integration-tests-common = { workspace = true }
xcm-emulator = { workspace = true }

# Polkadot
polkadot-parachain-primitives = { workspace = true }
xcm = { workspace = true }
xcm-executor = { workspace = true }
pallet-xcm = { workspace = true }
xcm-primitives = { workspace = true }

# Runtimes
polkadot-runtime-common = { workspace = true }
parachains-common = { workspace = true }
rococo-runtime = { workspace = true }
asset-hub-kusama-runtime = { workspace = true }
asset-hub-polkadot-runtime = { workspace = true }
trappist-runtime = { path = "../../runtime/trappist" }
stout-runtime = { path = "../../runtime/stout" }

# Local
pallet-asset-registry = { workspace = true }

[features]
runtime-benchmarks = [
    "polkadot-runtime-common/runtime-benchmarks",
    "rococo-runtime/runtime-benchmarks",
    "asset-hub-kusama-runtime/runtime-benchmarks",
    "asset-hub-polkadot-runtime/runtime-benchmarks",
    "trappist-runtime/runtime-benchmarks",
    "stout-runtime/runtime-benchmarks",
    "polkadot-parachain-primitives/runtime-benchmarks",
    "pallet-xcm/runtime-benchmarks",
    "integration-tests-common/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "pallet-assets/runtime-benchmarks",
]
